--- a/.github/workflows/BiTGApps.yml
+++ b/.github/workflows/BiTGApps.yml
@@ -3,8 +3,12 @@ name: BiTGApps Build
 on:
   workflow_dispatch:
 
+env:
+  TOKEN: ${{ secrets.TOKEN }}
+
 jobs:
   build:
+    if: github.repository_owner == 'BiTGApps'
     runs-on: ubuntu-latest
 
     steps:
@@ -52,12 +56,25 @@ jobs:
            zip -qr9 Velvet-v1.0.zip * && cd ../..
            cp -f BiTGApps/Velvet/Velvet-v1.0.zip out
 
+       - name: Sign Velvet Package
+         run: |
+           wget https://github.com/BiTGApps/BiTGApps/raw/master/tools/zipsigner/zipsigner.jar
+           sudo java -jar zipsigner.jar out/Velvet-v1.0.zip out/Velvet-v1.0-Signed.zip
+           rm -rf out/Velvet-v1.0.zip && mv -f out/Velvet-v1.0-Signed.zip out/Velvet-v1.0.zip
+           mv -f out/Velvet-v1.0.zip out/Assistant-v1.0.zip
+
        - name: Build Gearhead Package
          run: |
            cd BiTGApps/Gearhead
            . envsetup.sh && rm -rf envsetup.sh
            zip -qr9 Gearhead-v1.0.zip * && cd ../..
            cp -f BiTGApps/Gearhead/Gearhead-v1.0.zip out
+
+       - name: Sign Gearhead Package
+         run: |
+           sudo java -jar zipsigner.jar out/Gearhead-v1.0.zip out/Gearhead-v1.0-Signed.zip
+           rm -rf out/Gearhead-v1.0.zip && mv -f out/Gearhead-v1.0-Signed.zip out/Gearhead-v1.0.zip
+           mv -f out/Gearhead-v1.0.zip out/AndroidAuto-v1.0.zip
 
        - name: Build Markup Package
          run: |
@@ -66,11 +83,34 @@ jobs:
            zip -qr9 Markup-v1.0.zip * && cd ../..
            cp -f BiTGApps/Markup/Markup-v1.0.zip out
 
+       - name: Sign Markup Package
+         run: |
+           sudo java -jar zipsigner.jar out/Markup-v1.0.zip out/Markup-v1.0-Signed.zip
+           rm -rf out/Markup-v1.0.zip && mv -f out/Markup-v1.0-Signed.zip out/Markup-v1.0.zip
+
+       - name: Github Release CLI
+         run: |
+           npm install -g github-release-cli
+
+       - name: Release Signed Package
+         env:
+           RELEASE: v1.0
+         run: |
+           github-release upload \
+           --owner "BiTGApps" \
+           --repo "BiTGApps-Package" \
+           --token "$TOKEN" \
+           --tag "${RELEASE}" \
+           --release-name "BiTGApps ${RELEASE}" \
+           "out/Assistant-v1.0.zip" \
+           "out/AndroidAuto-v1.0.zip" \
+           "out/Markup-v1.0.zip"
+
        - name: Upload Build Artifact
          uses: actions/upload-artifact@v2
          with:
            name: BiTGApps-Build
            path: |
-             out/Gearhead-v1.0.zip
+             out/Assistant-v1.0.zip
+             out/AndroidAuto-v1.0.zip
              out/Markup-v1.0.zip
-             out/Velvet-v1.0.zip
